added axios package created endpoint ('/') returns a random dog image and its breed name

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "sequelize": "node_modules/.bin/sequelize"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
