--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.2.0",
     "pg": "6",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.35.2",
